force-app/main/default/objects/nd_picklist_field_link__mdt/nd_picklist_field_link__mdt.object-meta.xml
<CustomObject>
    <label>nd picklist field link</label>
    <pluralLabel>nd picklist field links</pluralLabel>
</CustomObject>