force-app/main/default/objects/nd_picklist_field_link__mdt/fields/global_picklist_field_api_name__c.field-meta.xml
<CustomField>
    <fullName>global_picklist_field_api_name__c</fullName>
    <label>global picklist field api name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>