force-app/main/default/objects/nd_picklist_field_link__mdt/fields/unrestricted_picklist_object_api_name__c.field-meta.xml
<CustomField>
    <fullName>unrestricted_picklist_object_api_name__c</fullName>
    <label>unrestricted picklist object api name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>